@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/sunpinyin-2.0.3-r1.ebuild,v 1.4 2012/05/03 19:24:34 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/sunpinyin-2.0.3-r1.ebuild,v 1.5 2015/04/19 11:33:18 blueness Exp $
 
 EAPI="3"
 
@@ -14,7 +14,7 @@ SRC_URI="${HOMEPAGE}/files/${P}.tar.gz
 
 LICENSE="LGPL-2.1 CDDL"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE=""
 
 RDEPEND="dev-db/sqlite:3"
