@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/sunpinyin
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/ChangeLog,v 1.13 2014/03/08 12:05:30 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/ChangeLog,v 1.14 2015/04/19 11:33:18 blueness Exp $
+
+  19 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
+  sunpinyin-2.0.3-r1.ebuild, sunpinyin-2.0.4_pre20130108.ebuild:
+  Keyword ~ppc and ~ppc64.  Bug #498686.
 
   08 Mar 2014; Pacho Ramos <pacho@gentoo.org>
   sunpinyin-2.0.4_pre20130108.ebuild:
